Added header management and allowed adresses.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,7 +80,7 @@ play.modules {
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = ["en"]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
@@ -351,11 +351,11 @@ db {
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  default.logSql=true
+  default.logSql = true
 }
 
 play.filters.hosts {
-  allowed = [".herokuapp.com", "localhost:9000"]
+  allowed = [".herokuapp.com", "localhost:9000", "localhost:9443", "145.239.82.224:9000", "145.239.82.224:9443"]
 }
 
 # The dots in play.filter.hosts can be replaced with curly braces e.g.
